Se añaden 6 discos (Tarkovsky, Wittgenstein, Disgresiones VI, Nochevieja, Calor calorcito y Jano Bifronte)

--- a/t_discografico.html
+++ b/t_discografico.html
@@ -168,12 +168,21 @@ A continuación, la discografía completa hasta la fecha de EBDP. Pulsando cada 
   <td width="130" height="20"><h3>2010</h3></td>
   </tr>
   <tr>
+    <td width="130" height="134"><a href="https://www.jamendo.com/album/89833/" target="_blank"> <img src="imagenes/portadas/nochevieja.jpg" alt="EBDP0046 – Nochevieja" width="130" height="130" border="0"  /></a></td>
+    <td width="130" height="134"><a href="https://www.jamendo.com/album/89833/" target="_blank"> <img src="imagenes/portadas/andrei.jpg" alt="EBDP0045 – Homenaje a Andrei Tarkovsky" width="130" height="130" border="0"  /></a></td>
+    <td width="130" height="134"><a href="https://www.jamendo.com/album/86214/" target="_blank"> <img src="imagenes/portadas/bifronte.jpg" alt="EBDP0044 – Improvisación para trío Nº 2 («Jano bifronte»)" width="130" height="130" border="0"  /></a></td>
+    <td width="130" height="134"><a href="https://www.jamendo.com/album/86209/" target="_blank"> <img src="imagenes/portadas/calorcito.jpg" alt="EBDP0043 – Improvisación para trío Nº9 («Calor, calor, calorcito»)" width="130" height="130" border="0"  /></a></td>
+  </td>
+  <tr>
+    <td width="130" height="134"><a href="https://www.jamendo.com/album/88565/" target="_blank"> <img src="imagenes/portadas/wittgenstein.jpg" alt="EBDP0042 – Homenaje a Wittgenstein" width="130" height="130" border="0"  /></a></td>
     <td width="130" height="134"><a href="http://www.jamendo.com/es/album/60103" target="_blank"> <img src="imagenes/portadas/bestiarioIII.jpg" alt="036 – Bestiario Vol. III – 25.01.2010 " width="130" height="130" border="0"  /></a></td>
     <td width="130" height="134"><a href="http://www.jamendo.com/es/album/69865" target="_blank"><img src="imagenes/portadas/nantx.jpg" border="0" /></a></td>
     <td width="130" height="134"><a href="http://www.jamendo.com/es/album/69707" target="_blank"><img src="imagenes/portadas/densidades.jpg" alt="En Busca del Pasto: Densidades Fluviales" width="130" height="130" border="0" /></a></td>
     <tr/>
     <tr>
-    <td width="130" height="20"><h3>2009</h3></td>
+    <td width="130" height="20">
+
+    <h3>2009</h3></td>
     </tr>
     <tr><td><a href="http://www.jamendo.com/es/album/69522" target="_blank"><img src="imagenes/portadas/escena_magat.jpg" border="0" /></a></td>
     <td><a href="http://www.jamendo.com/es/album/69246" target="_blank"><img src="imagenes/portadas/hoffman_II.jpg" border="0" /></a></td>
@@ -191,26 +200,23 @@ A continuación, la discografía completa hasta la fecha de EBDP. Pulsando cada 
    <tr> <td><a href="http://www.jamendo.com/es/album/46700" target="_blank"><img src="imagenes/portadas/silenc2.jpg" width="130" height="130" border="0" /></a></td>
     <td><a href="http://www.jamendo.com/es/album/44851" target="_blank"><img src="imagenes/portadas/liveconfusion.jpg" width="130" height="130" border="0" /></a></td>
     <td><a href="http://www.jamendo.com/es/album/43831" target="_blank"><img src="imagenes/portadas/imp5.jpg" width="130" height="130" border="0" /></a></td>
-      <td><a href="http://www.jamendo.com/es/album/39549" target="_blank"><img src="imagenes/portadas/disgresiones5.jpg" width="130" height="130" border="0" /></a></td>
-    </tr>
-  <tr>
 <td><a href="http://www.jamendo.com/es/album/38155" target="_blank"><img src="imagenes/portadas/bestiarioII.jpg" width="130" height="130" border="0" /></a></td>
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
+    </tr>
 
- <td>&nbsp;</td>
-  </tr>
   <tr>
     <td width="130" height="20
     "><h3>2008</h3></td>
     </tr>
   <tr>
+    <td><a href="http://www.jamendo.com/es/album/39549" target="_blank"><img src="imagenes/portadas/disgresiones5.jpg" width="130" height="130" border="0" /></a></td>
+    <td><a href="http://www.jamendo.com/es/album/88568" target="_blank"><img src="imagenes/portadas/disgresiones6.jpg" width="130" height="130" border="0" /></a></td>
     <td><a href="http://www.jamendo.com/es/album/35896" target="_blank"><img src="imagenes/portadas/imp4.jpg" width="130" height="130" border="0" /></a></td>
     <td><a href="http://www.jamendo.com/es/album/35908" target="_blank"><img src="imagenes/portadas/livesalami.jpg" width="130" height="130" border="0" /></a></td>
-    <td><a href="http://www.jamendo.com/es/album/35952" target="_blank"><img src="imagenes/portadas/liveateneo.jpg" width="130" height="130" border="0" /></a></td>
-    <td><a href="http://www.jamendo.com/es/album/29024" target="_blank"><img src="imagenes/portadas/conalbert210708.jpg" width="130" height="130" border="0" /></a></td>
+
   </tr>
   <tr>
+    <td><a href="http://www.jamendo.com/es/album/35952" target="_blank"><img src="imagenes/portadas/liveateneo.jpg" width="130" height="130" border="0" /></a></td>
+    <td><a href="http://www.jamendo.com/es/album/29024" target="_blank"><img src="imagenes/portadas/conalbert210708.jpg" width="130" height="130" border="0" /></a></td>
     <td><a href="http://www.jamendo.com/es/album/28708" target="_blank"><img src="imagenes/portadas/conalbert080708.jpg" width="130" height="130" border="0" /></a></td>
 
   <td><a href="http://www.jamendo.com/es/album/43993" target="_blank"><img src="imagenes/portadas/comp2008.jpg" width="130" height="130" border="0" /></a> </td>
