--- a/t_discografico_cam.html
+++ b/t_discografico_cam.html
@@ -164,28 +164,30 @@
     <td  height="20"><h4>MUSICA DE CÁMARA</h4></td>
     </tr>
     <tr>
+
+    <td width="130" height="134"><a href="https://www.jamendo.com/album/89833/" target="_blank"> <img src="imagenes/portadas/nochevieja.jpg" alt="EBDP0046 – Nochevieja" width="130" height="130" border="0"  /></a></td>
+    <td width="130" height="134"><a href="https://www.jamendo.com/album/86214/" target="_blank"> <img src="imagenes/portadas/bifronte.jpg" alt="EBDP0044 – Improvisación para trío Nº 2 («Jano bifronte»)" width="130" height="130" border="0"  /></a></td>
+    <td width="130" height="134"><a href="https://www.jamendo.com/album/86209/" target="_blank"> <img src="imagenes/portadas/calorcito.jpg" alt="EBDP0043 – Improvisación para trío Nº9 («Calor, calor, calorcito»)" width="130" height="130" border="0"  /></a></td>
     <td width="130"><a href="http://www.jamendo.com/es/album/57860" target="_blank"><img src="imagenes/portadas/imp8.jpg" width="130" height="130" border="0"  /></a></td>
+    </tr>
+
+
     <td width="130"><a href="http://www.jamendo.com/es/album/57552" target="_blank"><img src="imagenes/portadas/imp7.jpg" width="130" height="130" border="0" longdesc="http://www.jamendo.com/es/artist/en.busca.del.pasto" /></a></td>
     <td width="130"><a href="http://www.jamendo.com/es/album/57540" target="_blank"><img src="imagenes/portadas/imp6.jpg" width="130" height="130" border="0" longdesc="http://www.jamendo.com/es/artist/en.busca.del.pasto" /></a></td>
 
     <td><a href="http://www.jamendo.com/es/album/4004" target="_blank"><img src="imagenes/portadas/silenc2.jpg" width="130" height="130" border="0" /></a></td>
-    </tr>
-
-  <tr>
 <td><a href="http://www.jamendo.com/es/album/43831" target="_blank"><img src="imagenes/portadas/imp5.jpg" width="130" height="130" border="0" /></a></td>
+
+
+    </tr>
+  <tr>
     <td><a href="http://www.jamendo.com/es/album/35896" target="_blank"><img src="imagenes/portadas/imp4.jpg" width="130" height="130" border="0" /></a></td>
     <td><a href="http://www.jamendo.com/es/album/7683" target="_blank"><img src="imagenes/portadas/imp3.jpg" width="130" height="130" border="0" /></a></td>
 
  <td><a href="http://www.jamendo.com/es/album/5580" target="_blank"><img src="imagenes/portadas/imp2.jpg" width="130" height="130" border="0" /></a></td>
-  </tr>
-
-    <tr>
-
     <td><a href="http://www.jamendo.com/es/album/1047" target="_blank"><img src="http://imgjam.com/albums/s1/1047/covers/1.130.jpg" width="130" height="130" border="0" /></a></td>
-
-    <td>&nbsp;</td>
-    <td>&nbsp;</td>
   </tr>
+
   </table>
 
   </p></div>
