--- a/t_discografico_hom.html
+++ b/t_discografico_hom.html
@@ -163,6 +163,8 @@
     <td width="130" height="20
     "><h3>HOMENAJES</h3></td>
     </tr>
+    <td width="130" height="134"><a href="https://www.jamendo.com/album/89833/" target="_blank"> <img src="imagenes/portadas/andrei.jpg" alt="EBDP0045 – Homenaje a Andrei Tarkovsky" width="130" height="130" border="0"  /></a></td>
+    <td width="130" height="134"><a href="https://www.jamendo.com/album/88565/" target="_blank"> <img src="imagenes/portadas/wittgenstein.jpg" alt="EBDP0042 – Homenaje a Wittgenstein" width="130" height="130" border="0"  /></a></td>
     <td width="130"><a href="http://www.jamendo.com/es/album/1309" target="_blank"><img src="imagenes/portadas/homenajeJon.jpg" width="130" height="130" border="0" /></a></td>
     <td width="130"><a href="http://www.jamendo.com/es/album/3090" target="_blank"><img src="imagenes/portadas/homenajeSam.jpg" width="130" height="130" border="0" /></a></td>
     <td width="130">&nbsp;</td>
