Se añade el disco 2009

--- a/t_discografico_com.html
+++ b/t_discografico_com.html
@@ -164,11 +164,13 @@
     <td width="130" height="20"><h3>COMPILACIONES</h3></td>
     </tr>
     <tr>
+
+    <td><a href="http://www.jamendo.com/es/album/97936" target="_blank"><img src="imagenes/portadas/2009.jpg" border="0" /></a></td>
+
     <td width="130" height="152"><a href="http://www.jamendo.com/es/album/46690" target="_blank"><img src="imagenes/portadas/primavera.jpg" width="130" height="130" border="0" /></a></td>
 
     <td><a href="http://www.jamendo.com/es/album/43993" target="_blank"><img src="imagenes/portadas/comp2008.jpg" width="130" height="130" border="0" /></a> </td>
     <td><a href="http://www.jamendo.com/es/album/2956" target="_blank"><img src="imagenes/portadas/sommer.jpg" width="130" height="130" border="0" /></a></td>
-    <td width="130"><a href="http://www.jamendo.com/es/album/1318" target="_blank"><img src="imagenes/portadas/berlinwinter.jpg" width="130" height="130" border="0" /></a> </td>
     </tr>
 
 
@@ -176,15 +178,16 @@
 
 
     <tr>
+    <td width="130"><a href="http://www.jamendo.com/es/album/1318" target="_blank"><img src="imagenes/portadas/berlinwinter.jpg" width="130" height="130" border="0" /></a> </td>
       <td><a href="http://www.jamendo.com/es/album/1328" target="_blank"><img src="imagenes/portadas/otono.jpg" width="130" height="130" border="0" /></a></td>
 
    <td><a href="http://www.jamendo.com/es/album/1044" target="_blank"><img src="imagenes/portadas/comp20042005.jpg" width="130" height="130" border="0" /></a></td>
 
    <td><a href="http://www.jamendo.com/es/album/1045" target="_blank"><img src="imagenes/portadas/comp2004.jpg" width="130" height="130" border="0" /></a></td>
 
-  <td><a href="http://www.jamendo.com/es/album/1048" target="_blank"><img src="imagenes/portadas/compvaquita2004.jpg" width="130" height="130" border="0" /></a></td>
-
+  </tr>
   <tr>
+  <td><a href="http://www.jamendo.com/es/album/1048" target="_blank"><img src="imagenes/portadas/compvaquita2004.jpg" width="130" height="130" border="0" /></a></td>
     <td><a href="http://www.jamendo.com/es/album/20401" target="_blank"><img src="imagenes/portadas/comppastoprimero.jpg" width="130" height="130" border="0" /></a></td>
   </tr>
   </table>
