Limpieza automática (formateado de NetBeans, <br> -> <br/>)

--- a/pgeneral_esc.html
+++ b/pgeneral_esc.html
@@ -1,117 +1,120 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>En Busca del Pasto. Un proyecto de improvisación. presentacion_general</title>
-<link href="estilopasto1.css" rel="stylesheet" type="text/css" />
-<style type="text/css">
-<!--
-#menugeneral1 {
-	position:absolute;
-	width:170px;
-	height:51px;
-	z-index:2;
-	top: 186px;
-	left: 362px;
-}
-#menugeneral2 {
-	position:absolute;
-	width:170px;
-	height:44px;
-	z-index:2;
-	top: 237px;
-	left: 362px;
-}
-#menugeneral3 {
-	position:absolute;
-	width:170px;
-	height:39px;
-	z-index:2;
-	top: 281px;
-	left: 362px;
-}
-#menugeneral4 {
-	position:absolute;
-	width:170px;
-	height:39px;
-	z-index:2;
-	top: 320px;
-	left: 362px;
-}
-#menugeneral5 {
-	position:absolute;
-	width:170px;
-	height:41px;
-	z-index:2;
-	top: 359px;
-	left: 362px;
-}
--->
-</style>
-<script type="text/javascript">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>En Busca del Pasto. Un proyecto de improvisación. presentacion_general</title>
+    <link href="estilopasto1.css" rel="stylesheet" type="text/css" />
+    <style type="text/css">
+      <!--
+      #menugeneral1 {
+        position:absolute;
+        width:170px;
+        height:51px;
+        z-index:2;
+        top: 186px;
+        left: 362px;
+      }
+      #menugeneral2 {
+        position:absolute;
+        width:170px;
+        height:44px;
+        z-index:2;
+        top: 237px;
+        left: 362px;
+      }
+      #menugeneral3 {
+        position:absolute;
+        width:170px;
+        height:39px;
+        z-index:2;
+        top: 281px;
+        left: 362px;
+      }
+      #menugeneral4 {
+        position:absolute;
+        width:170px;
+        height:39px;
+        z-index:2;
+        top: 320px;
+        left: 362px;
+      }
+      #menugeneral5 {
+        position:absolute;
+        width:170px;
+        height:41px;
+        z-index:2;
+        top: 359px;
+        left: 362px;
+      }
+      -->
+    </style>
+    <script type="text/javascript">
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-379241-2']);
-  _gaq.push(['_trackPageview']);
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-379241-2']);
+      _gaq.push(['_trackPageview']);
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+      (function () {
+        var ga = document.createElement('script');
+        ga.type = 'text/javascript';
+        ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(ga, s);
+      })();
 
-</script>
-</head>
+    </script>
+  </head>
 
-<body>
-<div id="contenedor">
+  <body>
+    <div id="contenedor">
 
-<img src="imagenes/fondos/presentacion_general/t_escenico.jpg" border="0" usemap="#Map" />
-<map name="Map" id="Map"><area shape="poly" coords="462,226" href="#" /><area shape="rect" coords="50,39,464,121" href="index.html" target="_self" />
-<area shape="rect" coords="413,198,523,228" href="pgeneral.html" target="_self" alt="texto general" />
-<area shape="rect" coords="430,242,523,267" href="pgeneral_disco.html" target="_self" />
-<area shape="rect" coords="412,326,522,354" href="pgeneral_perf.html" target="_self" />
-<area shape="rect" coords="394,363,528,396" href="pgeneral_nom.html" target="_self" />
-<area shape="rect" coords="369,282,528,315" href="pgeneral_esc.html" />
+      <img src="imagenes/fondos/presentacion_general/t_escenico.jpg" border="0" usemap="#Map" />
+      <map name="Map" id="Map"><area shape="poly" coords="462,226" href="#" /><area shape="rect" coords="50,39,464,121" href="index.html" target="_self" />
+        <area shape="rect" coords="413,198,523,228" href="pgeneral.html" target="_self" alt="texto general" />
+        <area shape="rect" coords="430,242,523,267" href="pgeneral_disco.html" target="_self" />
+        <area shape="rect" coords="412,326,522,354" href="pgeneral_perf.html" target="_self" />
+        <area shape="rect" coords="394,363,528,396" href="pgeneral_nom.html" target="_self" />
+        <area shape="rect" coords="369,282,528,315" href="pgeneral_esc.html" />
 
-<area shape="poly" coords="66,199,97,303,311,268,182,209" href="pgeneral_f.html" target="_self" />
-<area shape="poly" coords="210,414,296,333,108,318,69,379" href="t_escenico_f.html" target="_self" /><area shape="poly" coords="43,465,65,422,296,434,304,514" href="t_discografico_f.html" target="_self" />
-<area shape="poly" coords="68,553,270,527,288,592,96,624" href="t_video_f.html" target="_self"/>
-<area shape="poly" coords="71,709,180,629,288,707" href="contactos_f.html" target="_self" />
-<area shape="poly" coords="1040,110,1054,96,1093,97,1128,116,1120,134,1045,132" href="pgeneral_f.html" target="_self" />
+        <area shape="poly" coords="66,199,97,303,311,268,182,209" href="pgeneral_f.html" target="_self" />
+        <area shape="poly" coords="210,414,296,333,108,318,69,379" href="t_escenico_f.html" target="_self" /><area shape="poly" coords="43,465,65,422,296,434,304,514" href="t_discografico_f.html" target="_self" />
+        <area shape="poly" coords="68,553,270,527,288,592,96,624" href="t_video_f.html" target="_self"/>
+        <area shape="poly" coords="71,709,180,629,288,707" href="contactos_f.html" target="_self" />
+        <area shape="poly" coords="1040,110,1054,96,1093,97,1128,116,1120,134,1045,132" href="pgeneral_f.html" target="_self" />
 
-</map>
-
-
-
-
-<div class="estilocaja" id="caja">
-</div>
-
-<div class="estilocaja" id="caja2">
-<div class="estilocaja" id="cajita">
-
-<p>EBDP trabaja también los contextos donde la música vive cada vez. En principio, el contexto es el propio espacio en el que la improvisación musical está teniendo lugar; EBDP también trabaja, pues, en la construcción o elección de esos espacios.
-<p></p>
-El motivo fundamental es aportar al proyecto caracteres extra-musicales, al tiempo que se pretenden resaltar y poner a prueba diferentes conceptos que circundan el acto de improvisar.
-<p></p>
-El modo más convencional de hacerlo es mediante la proyección de vídeos sobre el escenario. La mayoría de vídeos son realizados por EBDP, aunque también se han hecho actuaciones sobre películas, fotografías, pinturas o dibujos de autores escogidos (a los que se pretende recoger u homenajear). En general, los videos ofrecen un marco de significaciones o temas en el que se ubica el inestable acontecer de la música.
-<p></p>
-<img src="imagenes/fotos/textos/montaje_b.jpg" width="565" height="150" />
-<p>En otras ocasiones se trabaja acondicionando el propio escenario o, en general, la sala o espacio donde se realizará la improvisación. Ha sido frecuente sacar el escenario a lugares poco frecuentes (la calle, un descampado, el campo, la sala de un museo, etc.). Se ha trabajado en "instalaciones sonoras", disponiendo o dispersando el "escenario" y los "músicos" en una sala de museo, como una pieza que perdura en marcha durante un tiempo indefinido.</p>
-<p></p>
-También se han realizado ensayos a través de Internet: las herramientas de video conferencia permiten realizar un concierto en tres lugares simultáneamente (aprovechando la circunstancia de que uno de los integrantes de EBDP vive en Berlín, otro en París, otro en Valencia y el resto en Madrid), proyectando sobre cada escenario la imagen de los “ausentes” (es importante destacar que los envíos de señal sufren retardos que llenan de accidentes la ya accidentada improvisación).
-<p></p>
-En general, se pretenden plantear nuevas condiciones físico-espaciales en las que desarrollar la actuación y, por tanto, también la expectación, medios peculiares de comunicación entre los músicos y entre éstos y los espectadores, se cuestionan algunas ideas en torno a la presencia y permanencia de la obra, la relación entre público-obra-lugar, la simultaneidad, ajustes y desajustes con el entorno, cuestionamiento de los protocolos sociales ligados a la producción, exposición y contemplación de obras, etc.</p>
-</div>
-</div>
-</div>
+      </map>
 
 
-<div  id="ccommons">
-  <div class="creative"id="text">2010. EN BUSCA DEL PASTO. Todos los contenidos de esta web están bajo licencia "by-sa 3.0" de</div>
 
-  <div id="cc"><a href="http://creativecommons.org/licenses/by-sa/3.0/" target="_blank"><img src="imagenes/ccommons/cc.logo.large.png" width="148" height="34" border="0" /></a></div>
-</div>
-</body>
+
+      <div class="estilocaja" id="caja">
+      </div>
+
+      <div class="estilocaja" id="caja2">
+        <div class="estilocaja" id="cajita">
+
+          <p>EBDP trabaja también los contextos donde la música vive cada vez. En principio, el contexto es el propio espacio en el que la improvisación musical está teniendo lugar; EBDP también trabaja, pues, en la construcción o elección de esos espacios.
+            <p></p>
+            El motivo fundamental es aportar al proyecto caracteres extra-musicales, al tiempo que se pretenden resaltar y poner a prueba diferentes conceptos que circundan el acto de improvisar.
+            <p></p>
+            El modo más convencional de hacerlo es mediante la proyección de vídeos sobre el escenario. La mayoría de vídeos son realizados por EBDP, aunque también se han hecho actuaciones sobre películas, fotografías, pinturas o dibujos de autores escogidos (a los que se pretende recoger u homenajear). En general, los videos ofrecen un marco de significaciones o temas en el que se ubica el inestable acontecer de la música.
+            <p></p>
+            <img src="imagenes/fotos/textos/montaje_b.jpg" width="565" height="150" />
+            <p>En otras ocasiones se trabaja acondicionando el propio escenario o, en general, la sala o espacio donde se realizará la improvisación. Ha sido frecuente sacar el escenario a lugares poco frecuentes (la calle, un descampado, el campo, la sala de un museo, etc.). Se ha trabajado en "instalaciones sonoras", disponiendo o dispersando el "escenario" y los "músicos" en una sala de museo, como una pieza que perdura en marcha durante un tiempo indefinido.</p>
+            <p></p>
+            También se han realizado ensayos a través de Internet: las herramientas de video conferencia permiten realizar un concierto en tres lugares simultáneamente (aprovechando la circunstancia de que uno de los integrantes de EBDP vive en Berlín, otro en París, otro en Valencia y el resto en Madrid), proyectando sobre cada escenario la imagen de los “ausentes” (es importante destacar que los envíos de señal sufren retardos que llenan de accidentes la ya accidentada improvisación).
+            <p></p>
+            En general, se pretenden plantear nuevas condiciones físico-espaciales en las que desarrollar la actuación y, por tanto, también la expectación, medios peculiares de comunicación entre los músicos y entre éstos y los espectadores, se cuestionan algunas ideas en torno a la presencia y permanencia de la obra, la relación entre público-obra-lugar, la simultaneidad, ajustes y desajustes con el entorno, cuestionamiento de los protocolos sociales ligados a la producción, exposición y contemplación de obras, etc.</p>
+        </div>
+      </div>
+    </div>
+
+
+    <div  id="ccommons">
+      <div class="creative"id="text">2010. EN BUSCA DEL PASTO. Todos los contenidos de esta web están bajo licencia "by-sa 3.0" de</div>
+
+      <div id="cc"><a href="http://creativecommons.org/licenses/by-sa/3.0/" target="_blank"><img src="imagenes/ccommons/cc.logo.large.png" width="148" height="34" border="0" /></a></div>
+    </div>
+  </body>
 </html>
