--- a/t_video_vis.html
+++ b/t_video_vis.html
@@ -1,63 +1,61 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>En Busca del Pasto. Un proyecto de improvisación</title>
-<link href="estilopasto1.css" rel="stylesheet" type="text/css" />
-<style type="text/css">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>En Busca del Pasto. Un proyecto de improvisación</title>
+    <link href="estilopasto1.css" rel="stylesheet" type="text/css" />
+    <style type="text/css">
 
-</style>
-<script type="text/javascript">
+    </style>
+    <script type="text/javascript">
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-379241-2']);
-  _gaq.push(['_trackPageview']);
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-379241-2']);
+      _gaq.push(['_trackPageview']);
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+      (function () {
+        var ga = document.createElement('script');
+        ga.type = 'text/javascript';
+        ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(ga, s);
+      })();
 
-</script>
-</head>
+    </script>
+  </head>
 
-<body>
-<div id="contenedor">
+  <body>
+    <div id="contenedor">
 
-<img src="imagenes/fondos/video/visuales.jpg"  border="0"  usemap="#Map"/>
-
-
-<map name="Map" id="Map"><area shape="poly" coords="462,226" href="#" /><area shape="rect" coords="50,39,464,121" href="index.html" target="_self" />
-<area shape="poly" coords="66,199,97,303,311,268,182,209" href="pgeneral_f.html" target="_self" />
-<area shape="poly" coords="210,414,296,333,108,318,69,379" href="t_escenico_f.html" target="_self" /><area shape="poly" coords="43,465,65,422,296,434,304,514" href="t_discografico_f.html" target="_self" />
-<area shape="poly" coords="68,553,270,527,288,592,96,624" href="t_video_f.html" target="_self"/>
-<area shape="poly" coords="71,709,180,629,288,707" href="contactos_f.html" target="_self" />
-<area shape="poly" coords="425,357,427,374,501,373,500,358" href="t_video_los.html" />
-<area shape="poly" coords="423,397,497,394,504,420,427,421" href="t_video_vis.html" />
+      <img src="imagenes/fondos/video/visuales.jpg"  border="0"  usemap="#Map"/>
 
 
-<area shape="poly" coords="509,455,512,434,425,437,428,455" href="t_video_act.html" />
-<area shape="poly" coords="417,477,416,492,515,493,512,473" href="t_video_doc.html" />
-<area shape="poly" coords="445,522,492,522,491,540,447,542" href="t_video_var.html" />
+      <map name="Map" id="Map"><area shape="poly" coords="462,226" href="#" /><area shape="rect" coords="50,39,464,121" href="index.html" target="_self" />
+        <area shape="poly" coords="66,199,97,303,311,268,182,209" href="pgeneral_f.html" target="_self" />
+        <area shape="poly" coords="210,414,296,333,108,318,69,379" href="t_escenico_f.html" target="_self" /><area shape="poly" coords="43,465,65,422,296,434,304,514" href="t_discografico_f.html" target="_self" />
+        <area shape="poly" coords="68,553,270,527,288,592,96,624" href="t_video_f.html" target="_self"/>
+        <area shape="poly" coords="71,709,180,629,288,707" href="contactos_f.html" target="_self" />
+        <area shape="poly" coords="425,357,427,374,501,373,500,358" href="t_video_los.html" />
+        <area shape="poly" coords="423,397,497,394,504,420,427,421" href="t_video_vis.html" />
 
-<area shape="poly" coords="1041,107,1057,95,1091,97,1127,116,1119,133,1046,132" href="t_video_f.html" />
-</map>
 
+        <area shape="poly" coords="509,455,512,434,425,437,428,455" href="t_video_act.html" />
+        <area shape="poly" coords="417,477,416,492,515,493,512,473" href="t_video_doc.html" />
+        <area shape="poly" coords="445,522,492,522,491,540,447,542" href="t_video_var.html" />
 
-
-
-<div class="estilocaja" id="caja">
-</div>
-
-<div class="estilocaja" id="caja2">
-<div class="estilocaja" id="cajita">
-<p>Algunos videos utilizados por EBDP como fondo de improvisaciones musicales</p>
+        <area shape="poly" coords="1041,107,1057,95,1091,97,1127,116,1119,133,1046,132" href="t_video_f.html" />
+      </map>
 
 
 
 
+      <div class="estilocaja" id="caja">
+      </div>
 
+      <div class="estilocaja" id="caja2">
+        <div class="estilocaja" id="cajita">
+          <p>Algunos videos utilizados por EBDP como fondo de improvisaciones musicales</p>
 
 
 
@@ -67,38 +65,43 @@
 
 
 
- <p align="right">
-<a href="http://www.vimeo.com/7549365" target="_blank"><img src="imagenes/video/04_Buildings.jpg" border="4" /></a>
-<br>
-<br>
-<a href="http://www.vimeo.com/7549365" target="_blank">Buildings Collage</a><br>
-Video de Diegonante</p>
-
-<p align="left">
-<a href="http://www.vimeo.com/7548148" target="_blank"><img src="imagenes/video/05_Ostcreuz.jpg" border="4" /></a>
-<br>
-<br>
-<a href="http://www.vimeo.com/7548148" target="_blank">Ostkreuz</a><br>
-Video de Diegonante.</p>
-
-
-<br>
 
 
 
 
 
+          <p align="right">
+            <a href="http://www.vimeo.com/7549365" target="_blank"><img src="imagenes/video/04_Buildings.jpg" border="4" /></a>
+            <br/>
+            <br/>
+            <a href="http://www.vimeo.com/7549365" target="_blank">Buildings Collage</a><br/>
+            Video de Diegonante</p>
 
-  </div>
-</div>
-</div>
-
-<div  id="ccommons">
-  <div class="creative"id="text">2010. EN BUSCA DEL PASTO. Todos los contenidos de esta web están bajo licencia "by-sa 3.0" de</div>
-
-  <div id="cc"><a href="http://creativecommons.org/licenses/by-sa/3.0/" target="_blank"><img src="imagenes/ccommons/cc.logo.large.png" width="148" height="34" border="0" /></a></div>
-</div>
+          <p align="left">
+            <a href="http://www.vimeo.com/7548148" target="_blank"><img src="imagenes/video/05_Ostcreuz.jpg" border="4" /></a>
+            <br/>
+            <br/>
+            <a href="http://www.vimeo.com/7548148" target="_blank">Ostkreuz</a><br/>
+            Video de Diegonante.</p>
 
 
-</body>
+          <br/>
+
+
+
+
+
+
+        </div>
+      </div>
+    </div>
+
+    <div  id="ccommons">
+      <div class="creative"id="text">2010. EN BUSCA DEL PASTO. Todos los contenidos de esta web están bajo licencia "by-sa 3.0" de</div>
+
+      <div id="cc"><a href="http://creativecommons.org/licenses/by-sa/3.0/" target="_blank"><img src="imagenes/ccommons/cc.logo.large.png" width="148" height="34" border="0" /></a></div>
+    </div>
+
+
+  </body>
 </html>
