--- a/pgeneral_nom.html
+++ b/pgeneral_nom.html
@@ -1,113 +1,116 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>En Busca del Pasto. Un proyecto de improvisación. presentacion_general</title>
-<link href="estilopasto1.css" rel="stylesheet" type="text/css" />
-<style type="text/css">
-<!--
-#menugeneral1 {
-	position:absolute;
-	width:170px;
-	height:51px;
-	z-index:2;
-	top: 186px;
-	left: 362px;
-}
-#menugeneral2 {
-	position:absolute;
-	width:170px;
-	height:44px;
-	z-index:2;
-	top: 237px;
-	left: 362px;
-}
-#menugeneral3 {
-	position:absolute;
-	width:170px;
-	height:39px;
-	z-index:2;
-	top: 281px;
-	left: 362px;
-}
-#menugeneral4 {
-	position:absolute;
-	width:170px;
-	height:39px;
-	z-index:2;
-	top: 320px;
-	left: 362px;
-}
-#menugeneral5 {
-	position:absolute;
-	width:170px;
-	height:41px;
-	z-index:2;
-	top: 359px;
-	left: 362px;
-}
--->
-</style>
-<script type="text/javascript">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>En Busca del Pasto. Un proyecto de improvisación. presentacion_general</title>
+    <link href="estilopasto1.css" rel="stylesheet" type="text/css" />
+    <style type="text/css">
+      <!--
+      #menugeneral1 {
+        position:absolute;
+        width:170px;
+        height:51px;
+        z-index:2;
+        top: 186px;
+        left: 362px;
+      }
+      #menugeneral2 {
+        position:absolute;
+        width:170px;
+        height:44px;
+        z-index:2;
+        top: 237px;
+        left: 362px;
+      }
+      #menugeneral3 {
+        position:absolute;
+        width:170px;
+        height:39px;
+        z-index:2;
+        top: 281px;
+        left: 362px;
+      }
+      #menugeneral4 {
+        position:absolute;
+        width:170px;
+        height:39px;
+        z-index:2;
+        top: 320px;
+        left: 362px;
+      }
+      #menugeneral5 {
+        position:absolute;
+        width:170px;
+        height:41px;
+        z-index:2;
+        top: 359px;
+        left: 362px;
+      }
+      -->
+    </style>
+    <script type="text/javascript">
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-379241-2']);
-  _gaq.push(['_trackPageview']);
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-379241-2']);
+      _gaq.push(['_trackPageview']);
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+      (function () {
+        var ga = document.createElement('script');
+        ga.type = 'text/javascript';
+        ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(ga, s);
+      })();
 
-</script>
-</head>
+    </script>
+  </head>
 
-<body>
-<div id="contenedor">
+  <body>
+    <div id="contenedor">
 
-<img src="imagenes/fondos/presentacion_general/nombres.jpg" border="0" usemap="#Map" />
-<map name="Map" id="Map"><area shape="poly" coords="462,226" href="#" /><area shape="rect" coords="50,39,464,121" href="index.html" target="_self" />
-<area shape="rect" coords="413,198,523,228" href="pgeneral.html" target="_self" alt="texto general" />
-<area shape="rect" coords="430,242,523,267" href="pgeneral_disco.html" target="_self" />
-<area shape="rect" coords="412,326,522,354" href="pgeneral_perf.html" target="_self" />
-<area shape="rect" coords="394,363,528,396" href="pgeneral_nom.html" target="_self" />
-<area shape="rect" coords="369,282,528,315" href="pgeneral_esc.html" />
-
-
-<area shape="poly" coords="66,199,97,303,311,268,182,209" href="pgeneral_f.html" target="_self" />
-<area shape="poly" coords="210,414,296,333,108,318,69,379" href="t_escenico_f.html" target="_self" /><area shape="poly" coords="43,465,65,422,296,434,304,514" href="t_discografico_f.html" target="_self" />
-<area shape="poly" coords="68,553,270,527,288,592,96,624" href="t_video_f.html" target="_self"/>
-<area shape="poly" coords="71,709,180,629,288,707" href="contactos_f.html" target="_self" />
-<area shape="poly" coords="1040,110,1054,96,1093,97,1128,116,1120,134,1045,132" href="pgeneral_f.html" target="_self" />
-
-</map>
+      <img src="imagenes/fondos/presentacion_general/nombres.jpg" border="0" usemap="#Map" />
+      <map name="Map" id="Map"><area shape="poly" coords="462,226" href="#" /><area shape="rect" coords="50,39,464,121" href="index.html" target="_self" />
+        <area shape="rect" coords="413,198,523,228" href="pgeneral.html" target="_self" alt="texto general" />
+        <area shape="rect" coords="430,242,523,267" href="pgeneral_disco.html" target="_self" />
+        <area shape="rect" coords="412,326,522,354" href="pgeneral_perf.html" target="_self" />
+        <area shape="rect" coords="394,363,528,396" href="pgeneral_nom.html" target="_self" />
+        <area shape="rect" coords="369,282,528,315" href="pgeneral_esc.html" />
 
 
+        <area shape="poly" coords="66,199,97,303,311,268,182,209" href="pgeneral_f.html" target="_self" />
+        <area shape="poly" coords="210,414,296,333,108,318,69,379" href="t_escenico_f.html" target="_self" /><area shape="poly" coords="43,465,65,422,296,434,304,514" href="t_discografico_f.html" target="_self" />
+        <area shape="poly" coords="68,553,270,527,288,592,96,624" href="t_video_f.html" target="_self"/>
+        <area shape="poly" coords="71,709,180,629,288,707" href="contactos_f.html" target="_self" />
+        <area shape="poly" coords="1040,110,1054,96,1093,97,1128,116,1120,134,1045,132" href="pgeneral_f.html" target="_self" />
+
+      </map>
 
 
-<div class="estilocaja" id="caja">
-</div>
 
-<div class="estilocaja" id="caja2">
-<div class="estilocaja" id="cajita">
 
-<p>La primera tentativa de EBDP fue impulsada por Pedro Pons (bajista) y Jorge Ruiz (percusión), que se unieron a Diego Agulló (guitarra), Ricardo Sanz (objetos) y Roberto Rodrigo (electrónica) —los instrumentos indicados son aquellos que se usaron en la primera improvisación (grabada en el 13/09/2003, y editada como disco bajo el título “Pasto Primero”); no obstante, a lo largo de los años se ha cambiado numerosas veces la configuración instrumental—. Muy poco tiempo después se sumaron Pablo Delgado de Torres (electrónica) y Juan Morales (CD-Player); estas siete personas han constituido el “núcleo duro” de EBDP desde entonces hasta hoy.
-</p><p>
-Pero EBDP se ha mostrado siempre abierto a la colaboración con otros aristas o colectivos, tanto a nivel musical, como a nivel escénico o preformativo; algunos sólo puntualmente, otros han formado parte de EBDP durante ciertos periodos.
-</p><p>
-Daniel Ruiz participó como percusionista en los primeros tiempos, actuando en el primer concierto de EBDP (el 18/01/2004). Fátima Albarrán realizó diversos videos que fueron proyectados en varios conciertos a lo largo de 2004 y 2005 (hasta que EBDP empezó a realizar sus propios videos, casi todos de la mano de Diego Agulló (“Diegonante”) y Jorge Ruiz). Es más que destacable la presencia del contrabajista Miguel Navarrete durante varios meses del año 2007, así como la inestimable aportación electrónica de Alberto González entre 2008 y 2009.
-</p><p>
-De forma más puntual han participado Luís Soler (trompeta), “Juanas” (saxofón), Nacho peña (percusión), Javier Gil (poeta), Daniela Lemman (performer), Christian Fernández (performer), Zan Hoffman (músico solista), Minuit de Lacroix (electrónica), NaN-tx (Video-Jockey), Diego Sanz (electrónica), Agata (performer)…, Maku (fotografía) y algunos otros que, lamentablemente, deben quedar en el anonimato.</p>
-</div>
+      <div class="estilocaja" id="caja">
+      </div>
 
-</div>
-</div>
+      <div class="estilocaja" id="caja2">
+        <div class="estilocaja" id="cajita">
 
-<div  id="ccommons">
-  <div class="creative"id="text">2010. EN BUSCA DEL PASTO. Todos los contenidos de esta web están bajo licencia "by-sa 3.0" de</div>
+          <p>La primera tentativa de EBDP fue impulsada por Pedro Pons (bajista) y Jorge Ruiz (percusión), que se unieron a Diego Agulló (guitarra), Ricardo Sanz (objetos) y Roberto Rodrigo (electrónica) —los instrumentos indicados son aquellos que se usaron en la primera improvisación (grabada en el 13/09/2003, y editada como disco bajo el título “Pasto Primero”); no obstante, a lo largo de los años se ha cambiado numerosas veces la configuración instrumental—. Muy poco tiempo después se sumaron Pablo Delgado de Torres (electrónica) y Juan Morales (CD-Player); estas siete personas han constituido el “núcleo duro” de EBDP desde entonces hasta hoy.
+          </p><p>
+            Pero EBDP se ha mostrado siempre abierto a la colaboración con otros aristas o colectivos, tanto a nivel musical, como a nivel escénico o preformativo; algunos sólo puntualmente, otros han formado parte de EBDP durante ciertos periodos.
+          </p><p>
+            Daniel Ruiz participó como percusionista en los primeros tiempos, actuando en el primer concierto de EBDP (el 18/01/2004). Fátima Albarrán realizó diversos videos que fueron proyectados en varios conciertos a lo largo de 2004 y 2005 (hasta que EBDP empezó a realizar sus propios videos, casi todos de la mano de Diego Agulló (“Diegonante”) y Jorge Ruiz). Es más que destacable la presencia del contrabajista Miguel Navarrete durante varios meses del año 2007, así como la inestimable aportación electrónica de Alberto González entre 2008 y 2009.
+          </p><p>
+            De forma más puntual han participado Luís Soler (trompeta), “Juanas” (saxofón), Nacho peña (percusión), Javier Gil (poeta), Daniela Lemman (performer), Christian Fernández (performer), Zan Hoffman (músico solista), Minuit de Lacroix (electrónica), NaN-tx (Video-Jockey), Diego Sanz (electrónica), Agata (performer)…, Maku (fotografía) y algunos otros que, lamentablemente, deben quedar en el anonimato.</p>
+        </div>
 
-  <div id="cc"><a href="http://creativecommons.org/licenses/by-sa/3.0/" target="_blank"><img src="imagenes/ccommons/cc.logo.large.png" width="148" height="34" border="0" /></a></div>
-</div>
-</body>
+      </div>
+    </div>
+
+    <div  id="ccommons">
+      <div class="creative"id="text">2010. EN BUSCA DEL PASTO. Todos los contenidos de esta web están bajo licencia "by-sa 3.0" de</div>
+
+      <div id="cc"><a href="http://creativecommons.org/licenses/by-sa/3.0/" target="_blank"><img src="imagenes/ccommons/cc.logo.large.png" width="148" height="34" border="0" /></a></div>
+    </div>
+  </body>
 </html>
