--- a/pgeneral_perf.html
+++ b/pgeneral_perf.html
@@ -1,118 +1,121 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>En Busca del Pasto. Un proyecto de improvisación. presentacion_general</title>
-<link href="estilopasto1.css" rel="stylesheet" type="text/css" />
-<style type="text/css">
-<!--
-#menugeneral1 {
-	position:absolute;
-	width:170px;
-	height:51px;
-	z-index:2;
-	top: 186px;
-	left: 362px;
-}
-#menugeneral2 {
-	position:absolute;
-	width:170px;
-	height:44px;
-	z-index:2;
-	top: 237px;
-	left: 362px;
-}
-#menugeneral3 {
-	position:absolute;
-	width:170px;
-	height:39px;
-	z-index:2;
-	top: 281px;
-	left: 362px;
-}
-#menugeneral4 {
-	position:absolute;
-	width:170px;
-	height:39px;
-	z-index:2;
-	top: 320px;
-	left: 362px;
-}
-#menugeneral5 {
-	position:absolute;
-	width:170px;
-	height:41px;
-	z-index:2;
-	top: 359px;
-	left: 362px;
-}
--->
-</style>
-<script type="text/javascript">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>En Busca del Pasto. Un proyecto de improvisación. presentacion_general</title>
+    <link href="estilopasto1.css" rel="stylesheet" type="text/css" />
+    <style type="text/css">
+      <!--
+      #menugeneral1 {
+        position:absolute;
+        width:170px;
+        height:51px;
+        z-index:2;
+        top: 186px;
+        left: 362px;
+      }
+      #menugeneral2 {
+        position:absolute;
+        width:170px;
+        height:44px;
+        z-index:2;
+        top: 237px;
+        left: 362px;
+      }
+      #menugeneral3 {
+        position:absolute;
+        width:170px;
+        height:39px;
+        z-index:2;
+        top: 281px;
+        left: 362px;
+      }
+      #menugeneral4 {
+        position:absolute;
+        width:170px;
+        height:39px;
+        z-index:2;
+        top: 320px;
+        left: 362px;
+      }
+      #menugeneral5 {
+        position:absolute;
+        width:170px;
+        height:41px;
+        z-index:2;
+        top: 359px;
+        left: 362px;
+      }
+      -->
+    </style>
+    <script type="text/javascript">
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-379241-2']);
-  _gaq.push(['_trackPageview']);
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-379241-2']);
+      _gaq.push(['_trackPageview']);
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+      (function () {
+        var ga = document.createElement('script');
+        ga.type = 'text/javascript';
+        ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(ga, s);
+      })();
 
-</script>
-</head>
+    </script>
+  </head>
 
-<body>
-<div id="contenedor">
+  <body>
+    <div id="contenedor">
 
-<img src="imagenes/fondos/presentacion_general/performance.jpg" border="0" usemap="#Map" />
-<map name="Map" id="Map"><area shape="poly" coords="462,226" href="#" /><area shape="rect" coords="50,39,464,121" href="index.html" target="_self" />
-<area shape="rect" coords="413,198,523,228" href="pgeneral.html" target="_self" alt="texto general" />
-<area shape="rect" coords="430,242,523,267" href="pgeneral_disco.html" target="_self" />
-<area shape="rect" coords="412,326,522,354" href="pgeneral_perf.html" target="_self" />
-<area shape="rect" coords="394,363,528,396" href="pgeneral_nom.html" target="_self" />
-<area shape="rect" coords="369,282,528,315" href="pgeneral_esc.html" />
+      <img src="imagenes/fondos/presentacion_general/performance.jpg" border="0" usemap="#Map" />
+      <map name="Map" id="Map"><area shape="poly" coords="462,226" href="#" /><area shape="rect" coords="50,39,464,121" href="index.html" target="_self" />
+        <area shape="rect" coords="413,198,523,228" href="pgeneral.html" target="_self" alt="texto general" />
+        <area shape="rect" coords="430,242,523,267" href="pgeneral_disco.html" target="_self" />
+        <area shape="rect" coords="412,326,522,354" href="pgeneral_perf.html" target="_self" />
+        <area shape="rect" coords="394,363,528,396" href="pgeneral_nom.html" target="_self" />
+        <area shape="rect" coords="369,282,528,315" href="pgeneral_esc.html" />
 
-<area shape="poly" coords="66,199,97,303,311,268,182,209" href="pgeneral_f.html" target="_self" />
-<area shape="poly" coords="210,414,296,333,108,318,69,379" href="t_escenico_f.html" target="_self" /><area shape="poly" coords="43,465,65,422,296,434,304,514" href="t_discografico_f.html" target="_self" />
-<area shape="poly" coords="68,553,270,527,288,592,96,624" href="t_video_f.html" target="_self"/>
-<area shape="poly" coords="71,709,180,629,288,707" href="contactos_f.html" target="_self" />
-<area shape="poly" coords="1040,110,1054,96,1093,97,1128,116,1120,134,1045,132" href="pgeneral_f.html" target="_self" />
+        <area shape="poly" coords="66,199,97,303,311,268,182,209" href="pgeneral_f.html" target="_self" />
+        <area shape="poly" coords="210,414,296,333,108,318,69,379" href="t_escenico_f.html" target="_self" /><area shape="poly" coords="43,465,65,422,296,434,304,514" href="t_discografico_f.html" target="_self" />
+        <area shape="poly" coords="68,553,270,527,288,592,96,624" href="t_video_f.html" target="_self"/>
+        <area shape="poly" coords="71,709,180,629,288,707" href="contactos_f.html" target="_self" />
+        <area shape="poly" coords="1040,110,1054,96,1093,97,1128,116,1120,134,1045,132" href="pgeneral_f.html" target="_self" />
 
-</map>
-
-
-
-
-
-
-<div class="estilocaja" id="caja">
-</div>
-
-<div class="estilocaja" id="caja2">
-<div class="estilocaja" id="cajita">
-
-<p>EBDP piensa que un actuación verdaderamente improvisada siempre debe contener elementos preformativos, aún cuando la actuación se presente como estrictamente musical. Y es que, en efecto, el que se planta en un escenario a tocar música sin ninguna idea preconcebida, no sólo expone su música (el resultado sonoro de lo que toca), sino que se expone sobre todo a sí mismo desarrollando esa actividad: “riesgo”, “entrega”, “decisión” o “indecisión”, “salir del atolladero”, etc., pueden ser categorías susceptibles de ser empleadas, y tales categorías no son estrictamente musicales.
-</p><p>
-Por otro lado, cuando EBDP saca el escenario a lugares poco frecuentes (como la calle, un descampado, el campo, etc.), no sólo se modifica el espacio de la actuación (y la consecuente influencia que éste ejerce sobre los improvisadores), sino que además se pretende “desenfocar” la actividad puramente musical, mezclándola con cuestiones de índole preformativo: “qué está sucediendo aquí”, “qué tipo de espectáculo es este”, o “qué pretenden”, etc., que van más allá de comprender la obra como un mero concierto de música.
-</p>
+      </map>
 
 
-<img src="imagenes/fotos/textos/con_abuelo.jpg" width="565" height="248" />
-<p>
-No obstante, sería en otoño de 2007 cuando EBDP tomaría plena conciencia del carácter preformativo de su improvisación, desarrollando su juego “Pasto en Escena” o “Pasto al desnudo”, donde los improvisadores no cuentan ni siquiera con un lugar asignado sobre el escenario, ni qué instrumentos u objetos habrían de utilizar. Básicamente, entonces, el juego consiste en extender la improvisación a todos los parámetros de la intervención escénica de los “músicos”, que ahora, además de improvisar música, también improvisan su lugar, su pose, su actitud, su gesto... Esto, ciertamente, abre mucho más el horizonte de sucesos posibles sobre el escenario, pues ahora éste se presta, no sólo a ser el origen de unos sonidos o unas músicas, sino también mostrar actividades más parecidas quizá al teatro, a la danza o al puro juego.
-</p><p>
-Y esto, en el fondo, no deja de ser una verdadera exigencia del “yo improviso” que debe guiar a un artista en el ámbito de la improvisación. Pues si uno verdaderamente improvisa, entonces no debería tener claro siquiera que lo que va a hacer sea música, o teatro o danza... “Yo improviso” debe querer decir: “No sé nada de lo que haré cuando suba al escenario”.
-</p>
-</div>
-</div>
-</div>
 
-<div  id="ccommons">
-  <div class="creative"id="text">2010. EN BUSCA DEL PASTO. Todos los contenidos de esta web están bajo licencia "by-sa 3.0" de</div>
 
-  <div id="cc"><a href="http://creativecommons.org/licenses/by-sa/3.0/" target="_blank"><img src="imagenes/ccommons/cc.logo.large.png" width="148" height="34" border="0" /></a></div>
-</div>
-</body>
+
+
+      <div class="estilocaja" id="caja">
+      </div>
+
+      <div class="estilocaja" id="caja2">
+        <div class="estilocaja" id="cajita">
+
+          <p>EBDP piensa que un actuación verdaderamente improvisada siempre debe contener elementos preformativos, aún cuando la actuación se presente como estrictamente musical. Y es que, en efecto, el que se planta en un escenario a tocar música sin ninguna idea preconcebida, no sólo expone su música (el resultado sonoro de lo que toca), sino que se expone sobre todo a sí mismo desarrollando esa actividad: “riesgo”, “entrega”, “decisión” o “indecisión”, “salir del atolladero”, etc., pueden ser categorías susceptibles de ser empleadas, y tales categorías no son estrictamente musicales.
+          </p><p>
+            Por otro lado, cuando EBDP saca el escenario a lugares poco frecuentes (como la calle, un descampado, el campo, etc.), no sólo se modifica el espacio de la actuación (y la consecuente influencia que éste ejerce sobre los improvisadores), sino que además se pretende “desenfocar” la actividad puramente musical, mezclándola con cuestiones de índole preformativo: “qué está sucediendo aquí”, “qué tipo de espectáculo es este”, o “qué pretenden”, etc., que van más allá de comprender la obra como un mero concierto de música.
+          </p>
+
+
+          <img src="imagenes/fotos/textos/con_abuelo.jpg" width="565" height="248" />
+          <p>
+            No obstante, sería en otoño de 2007 cuando EBDP tomaría plena conciencia del carácter preformativo de su improvisación, desarrollando su juego “Pasto en Escena” o “Pasto al desnudo”, donde los improvisadores no cuentan ni siquiera con un lugar asignado sobre el escenario, ni qué instrumentos u objetos habrían de utilizar. Básicamente, entonces, el juego consiste en extender la improvisación a todos los parámetros de la intervención escénica de los “músicos”, que ahora, además de improvisar música, también improvisan su lugar, su pose, su actitud, su gesto... Esto, ciertamente, abre mucho más el horizonte de sucesos posibles sobre el escenario, pues ahora éste se presta, no sólo a ser el origen de unos sonidos o unas músicas, sino también mostrar actividades más parecidas quizá al teatro, a la danza o al puro juego.
+          </p><p>
+            Y esto, en el fondo, no deja de ser una verdadera exigencia del “yo improviso” que debe guiar a un artista en el ámbito de la improvisación. Pues si uno verdaderamente improvisa, entonces no debería tener claro siquiera que lo que va a hacer sea música, o teatro o danza... “Yo improviso” debe querer decir: “No sé nada de lo que haré cuando suba al escenario”.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div  id="ccommons">
+      <div class="creative"id="text">2010. EN BUSCA DEL PASTO. Todos los contenidos de esta web están bajo licencia "by-sa 3.0" de</div>
+
+      <div id="cc"><a href="http://creativecommons.org/licenses/by-sa/3.0/" target="_blank"><img src="imagenes/ccommons/cc.logo.large.png" width="148" height="34" border="0" /></a></div>
+    </div>
+  </body>
 </html>
