--- a/t_escenico_f.html
+++ b/t_escenico_f.html
@@ -1,105 +1,108 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>En Busca del Pasto. Un proyecto de improvisación</title>
-<link href="estilopasto1.css" rel="stylesheet" type="text/css" />
-<style type="text/css">
-#menudisco1 {
-	position:absolute;
-	width:205px;
-	height:49px;
-	z-index:4;
-	left: 328px;
-	top: 367px;
-}
-#menudisco2 {
-	position:absolute;
-	width:205px;
-	height:49px;
-	z-index:4;
-	left: 328px;
-	top: 416px;
-}
-#menudisco3 {
-	position:absolute;
-	width:205px;
-	height:40px;
-	z-index:4;
-	left: 328px;
-	top: 465px;
-}
-#menudisco4 {
-	position:absolute;
-	width:205px;
-	height:38px;
-	z-index:4;
-	left: 328px;
-	top: 505px;
-}
-#menudisco5 {
-	position:absolute;
-	width:205px;
-	height:48px;
-	z-index:4;
-	left: 328px;
-	top: 543px;
-}
-#menudisco6 {
-	position:absolute;
-	width:205px;
-	height:48px;
-	z-index:4;
-	left: 328px;
-	top: 591px;
-}
-</style>
-<script type="text/javascript">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>En Busca del Pasto. Un proyecto de improvisación</title>
+    <link href="estilopasto1.css" rel="stylesheet" type="text/css" />
+    <style type="text/css">
+      #menudisco1 {
+        position:absolute;
+        width:205px;
+        height:49px;
+        z-index:4;
+        left: 328px;
+        top: 367px;
+      }
+      #menudisco2 {
+        position:absolute;
+        width:205px;
+        height:49px;
+        z-index:4;
+        left: 328px;
+        top: 416px;
+      }
+      #menudisco3 {
+        position:absolute;
+        width:205px;
+        height:40px;
+        z-index:4;
+        left: 328px;
+        top: 465px;
+      }
+      #menudisco4 {
+        position:absolute;
+        width:205px;
+        height:38px;
+        z-index:4;
+        left: 328px;
+        top: 505px;
+      }
+      #menudisco5 {
+        position:absolute;
+        width:205px;
+        height:48px;
+        z-index:4;
+        left: 328px;
+        top: 543px;
+      }
+      #menudisco6 {
+        position:absolute;
+        width:205px;
+        height:48px;
+        z-index:4;
+        left: 328px;
+        top: 591px;
+      }
+    </style>
+    <script type="text/javascript">
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-379241-2']);
-  _gaq.push(['_trackPageview']);
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-379241-2']);
+      _gaq.push(['_trackPageview']);
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+      (function () {
+        var ga = document.createElement('script');
+        ga.type = 'text/javascript';
+        ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(ga, s);
+      })();
 
-</script>
-</head>
+    </script>
+  </head>
 
-<body>
-<div id="contenedor">
+  <body>
+    <div id="contenedor">
 
-<img src="imagenes/fondos/escenico.jpg"  border="0"  usemap="#Map"/>
-
-
-<map name="Map" id="Map"><area shape="poly" coords="462,226" href="#" /><area shape="rect" coords="50,39,464,121" href="index.html" target="_self" />
-<area shape="poly" coords="66,199,97,303,311,268,182,209" href="pgeneral_f.html" target="_self" />
-<area shape="poly" coords="210,414,296,333,108,318,69,379" href="t_escenico_f.html" target="_self" /><area shape="poly" coords="43,465,65,422,296,434,304,514" href="t_discografico_f.html" target="_self" />
-<area shape="poly" coords="68,553,270,527,288,592,96,624" href="t_video_f.html" target="_self"/>
-<area shape="poly" coords="71,709,180,629,288,707" href="contactos_f.html" target="_self" />
-<area shape="rect" coords="397,385,508,403" href="t_escenico.html" target="_self" />
-<area shape="rect" coords="355,434,511,451" href="t_escenico_con.html" target="_self" />
-<area shape="rect" coords="366,473,512,493" href="t_escenico_esc.html" target="_self" />
-<area shape="rect" coords="363,518,517,535" href="t_escenico_ins.html" target="_self" />
-<area shape="rect" coords="396,561,509,580" href="t_escenico_pas.html" target="_self" />
-<area shape="rect" coords="431,604,503,622" href="t_escenico_ebd.html" target="_self" />
+      <img src="imagenes/fondos/escenico.jpg"  border="0"  usemap="#Map"/>
 
 
-
-
-</map>
+      <map name="Map" id="Map"><area shape="poly" coords="462,226" href="#" /><area shape="rect" coords="50,39,464,121" href="index.html" target="_self" />
+        <area shape="poly" coords="66,199,97,303,311,268,182,209" href="pgeneral_f.html" target="_self" />
+        <area shape="poly" coords="210,414,296,333,108,318,69,379" href="t_escenico_f.html" target="_self" /><area shape="poly" coords="43,465,65,422,296,434,304,514" href="t_discografico_f.html" target="_self" />
+        <area shape="poly" coords="68,553,270,527,288,592,96,624" href="t_video_f.html" target="_self"/>
+        <area shape="poly" coords="71,709,180,629,288,707" href="contactos_f.html" target="_self" />
+        <area shape="rect" coords="397,385,508,403" href="t_escenico.html" target="_self" />
+        <area shape="rect" coords="355,434,511,451" href="t_escenico_con.html" target="_self" />
+        <area shape="rect" coords="366,473,512,493" href="t_escenico_esc.html" target="_self" />
+        <area shape="rect" coords="363,518,517,535" href="t_escenico_ins.html" target="_self" />
+        <area shape="rect" coords="396,561,509,580" href="t_escenico_pas.html" target="_self" />
+        <area shape="rect" coords="431,604,503,622" href="t_escenico_ebd.html" target="_self" />
 
 
 
-</div>
 
-<div  id="ccommons">
-  <div class="creative"id="text">2010. EN BUSCA DEL PASTO. Todos los contenidos de esta web están bajo licencia "by-sa 3.0" de</div>
+      </map>
 
-  <div id="cc"><a href="http://creativecommons.org/licenses/by-sa/3.0/" target="_blank"><img src="imagenes/ccommons/cc.logo.large.png" width="148" height="34" border="0" /></a></div>
-</div>
-</body>
+
+
+    </div>
+
+    <div  id="ccommons">
+      <div class="creative"id="text">2010. EN BUSCA DEL PASTO. Todos los contenidos de esta web están bajo licencia "by-sa 3.0" de</div>
+
+      <div id="cc"><a href="http://creativecommons.org/licenses/by-sa/3.0/" target="_blank"><img src="imagenes/ccommons/cc.logo.large.png" width="148" height="34" border="0" /></a></div>
+    </div>
+  </body>
 </html>
