--- a/t_escenico_pas.html
+++ b/t_escenico_pas.html
@@ -1,139 +1,142 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>En Busca del Pasto. Un proyecto de improvisación</title>
-<link href="estilopasto1.css" rel="stylesheet" type="text/css" />
-<style type="text/css">
-#menudisco1 {
-	position:absolute;
-	width:205px;
-	height:49px;
-	z-index:4;
-	left: 328px;
-	top: 367px;
-}
-#menudisco2 {
-	position:absolute;
-	width:205px;
-	height:49px;
-	z-index:4;
-	left: 328px;
-	top: 416px;
-}
-#menudisco3 {
-	position:absolute;
-	width:205px;
-	height:40px;
-	z-index:4;
-	left: 328px;
-	top: 465px;
-}
-#menudisco4 {
-	position:absolute;
-	width:205px;
-	height:38px;
-	z-index:4;
-	left: 328px;
-	top: 505px;
-}
-#menudisco5 {
-	position:absolute;
-	width:205px;
-	height:48px;
-	z-index:4;
-	left: 328px;
-	top: 543px;
-}
-#menudisco6 {
-	position:absolute;
-	width:205px;
-	height:48px;
-	z-index:4;
-	left: 328px;
-	top: 591px;
-}
-</style>
-<script type="text/javascript">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>En Busca del Pasto. Un proyecto de improvisación</title>
+    <link href="estilopasto1.css" rel="stylesheet" type="text/css" />
+    <style type="text/css">
+      #menudisco1 {
+        position:absolute;
+        width:205px;
+        height:49px;
+        z-index:4;
+        left: 328px;
+        top: 367px;
+      }
+      #menudisco2 {
+        position:absolute;
+        width:205px;
+        height:49px;
+        z-index:4;
+        left: 328px;
+        top: 416px;
+      }
+      #menudisco3 {
+        position:absolute;
+        width:205px;
+        height:40px;
+        z-index:4;
+        left: 328px;
+        top: 465px;
+      }
+      #menudisco4 {
+        position:absolute;
+        width:205px;
+        height:38px;
+        z-index:4;
+        left: 328px;
+        top: 505px;
+      }
+      #menudisco5 {
+        position:absolute;
+        width:205px;
+        height:48px;
+        z-index:4;
+        left: 328px;
+        top: 543px;
+      }
+      #menudisco6 {
+        position:absolute;
+        width:205px;
+        height:48px;
+        z-index:4;
+        left: 328px;
+        top: 591px;
+      }
+    </style>
+    <script type="text/javascript">
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-379241-2']);
-  _gaq.push(['_trackPageview']);
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-379241-2']);
+      _gaq.push(['_trackPageview']);
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+      (function () {
+        var ga = document.createElement('script');
+        ga.type = 'text/javascript';
+        ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(ga, s);
+      })();
 
-</script>
-</head>
+    </script>
+  </head>
 
-<body>
-<div id="contenedor">
+  <body>
+    <div id="contenedor">
 
-<img src="imagenes/fondos/escenico_cerrar.jpg"  border="0"  usemap="#Map"/>
-
-
-<map name="Map" id="Map"><area shape="poly" coords="462,226" href="#" /><area shape="rect" coords="50,39,464,121" href="index.html" target="_self" />
-<area shape="poly" coords="66,199,97,303,311,268,182,209" href="pgeneral_f.html" target="_self" />
-<area shape="poly" coords="210,414,296,333,108,318,69,379" href="t_escenico_f.html" target="_self" /><area shape="poly" coords="43,465,65,422,296,434,304,514" href="t_discografico_f.html" target="_self" />
-<area shape="poly" coords="68,553,270,527,288,592,96,624" href="t_video_f.html" target="_self"/>
-<area shape="poly" coords="71,709,180,629,288,707" href="contactos_f.html" target="_self" />
-<area shape="poly" coords="1043,110,1055,94,1092,97,1130,115,1119,133,1044,131" href="t_escenico_f.html" />
+      <img src="imagenes/fondos/escenico_cerrar.jpg"  border="0"  usemap="#Map"/>
 
 
-</map>
+      <map name="Map" id="Map"><area shape="poly" coords="462,226" href="#" /><area shape="rect" coords="50,39,464,121" href="index.html" target="_self" />
+        <area shape="poly" coords="66,199,97,303,311,268,182,209" href="pgeneral_f.html" target="_self" />
+        <area shape="poly" coords="210,414,296,333,108,318,69,379" href="t_escenico_f.html" target="_self" /><area shape="poly" coords="43,465,65,422,296,434,304,514" href="t_discografico_f.html" target="_self" />
+        <area shape="poly" coords="68,553,270,527,288,592,96,624" href="t_video_f.html" target="_self"/>
+        <area shape="poly" coords="71,709,180,629,288,707" href="contactos_f.html" target="_self" />
+        <area shape="poly" coords="1043,110,1055,94,1092,97,1130,115,1119,133,1044,131" href="t_escenico_f.html" />
 
 
-<div id="menudisco1"><a href="t_escenico.html" target="_self"><img src="imagenes/botones/pequenos/t_escenico/act.jpg" width="205" height="49" border="0" /></a></div>
-<div id="menudisco2"><a href="t_escenico_con.html" target="_self"><img src="imagenes/botones/pequenos/t_escenico/conaud.jpg" width="205" height="49" border="0" /></a></div>
-<div id="menudisco3"><a href="t_escenico_esc.html" target="_self"><img src="imagenes/botones/pequenos/t_escenico/escperf.jpg" width="205" height="40" border="0" /></a></div>
-<div id="menudisco4"><a href="t_escenico_ins.html" target="_self"><img src="imagenes/botones/pequenos/t_escenico/instala.jpg" width="205" height="38" border="0" /></a></div>
-<div id="menudisco5"><a href="t_escenico_pas.html" target="_self"><img src="imagenes/botones/pequenos/t_escenico/enescenacarton.jpg" width="205" height="48" border="0" /></a></div>
-<div id="menudisco6"><a href="t_escenico_ebd.html" target="_self"><img src="imagenes/botones/pequenos/t_escenico/ebdpycia.jpg" width="205" height="48" border="0" /></a></div>
-
-<div class="estilocaja" id="caja">
-</div>
-
-<div class="estilocaja" id="caja2">
-<div class="estilocaja" id="cajita">
-<h3>Pasto en Escena (o Pasto al Desnudo)</h3>
-<p>En su línea hacia lo multidisciplinar, EBDP desarrolló en otoño de 2007 su juego “Pasto en Escena”. En su planteamiento original, este juego consiste en ofrecer un concierto de estricta improvisación musical, pero sin que los músicos tengan un lugar asignado sobre el escenario, ni tampoco un instrumento, objeto o set. Tanto los músicos como los instrumentos y objetos que se usarán se hallan fuera del escenario al comienzo de la actuación; todo empieza, pues, no sólo en silencio, sino además con el escenario vacío. Los músicos no sólo han de improvisar aquello que suena, sino también su lugar sobre el escenario, lo cual incluye la ubicación, la postura, el gesto…, entrando y saliendo a escena para configurar una sucesión de situaciones y disposiciones diferentes, al tiempo que se crea el inestable acontecer de lo musical.
-
-Siendo así, los “músicos” deben desempeñar también, en cierto modo, la labor de “actores” o “performers”. EBDP quiere que en su “Pasto en Escena” tengan cabida ya todo tipo de "acciones" y no sólo aquellas directamente relacionadas con lo musical. Del mismo modo, los músicos tienen la libertad de “disfrazarse”, o simplemente de cambiarse de ropa, poner y quitar colores de la escena, poner y quitar decorados u objetos de atrezo, etc…
-
-En resumen, se trata de ofrecer una actuación músico-performativa improvisada, con un carácter tan lúdico como experimental.
-</p>
-<img src="imagenes/fotos/trabajo escenico/montaje_pas.jpg" width="575" height="137" />
-<h3>Actuaciones realizadas del &quot;Pasto en Escena&quot;</h3>
-
-26/10/2007. Centro cultural “La Casa de los Jacintos” (Madrid). “Al desnudo”
-1/3/2008. Auditorio del “Ateneo de Madrid”, apertura del ciclo “Ateneo Abierto” (con la intervención escénica de Daniela Lemman).
-
-<br><br>14/9/2008. IV muestra de arte sonoro e interactivo In-Sonora.
+      </map>
 
 
-<br><br>22/11/2008 Festival Ulterior  en 14-30 Espacio Joven de Vallecas. Pasto en Escena con <a href="http://drainingbeatsonthebrain.com" target="_blank">Araguaneyleaf</a>.
+      <div id="menudisco1"><a href="t_escenico.html" target="_self"><img src="imagenes/botones/pequenos/t_escenico/act.jpg" width="205" height="49" border="0" /></a></div>
+      <div id="menudisco2"><a href="t_escenico_con.html" target="_self"><img src="imagenes/botones/pequenos/t_escenico/conaud.jpg" width="205" height="49" border="0" /></a></div>
+      <div id="menudisco3"><a href="t_escenico_esc.html" target="_self"><img src="imagenes/botones/pequenos/t_escenico/escperf.jpg" width="205" height="40" border="0" /></a></div>
+      <div id="menudisco4"><a href="t_escenico_ins.html" target="_self"><img src="imagenes/botones/pequenos/t_escenico/instala.jpg" width="205" height="38" border="0" /></a></div>
+      <div id="menudisco5"><a href="t_escenico_pas.html" target="_self"><img src="imagenes/botones/pequenos/t_escenico/enescenacarton.jpg" width="205" height="48" border="0" /></a></div>
+      <div id="menudisco6"><a href="t_escenico_ebd.html" target="_self"><img src="imagenes/botones/pequenos/t_escenico/ebdpycia.jpg" width="205" height="48" border="0" /></a></div>
 
-<br><br>7/11/2009 Sala Magatzems Wall & Video (Valencia) Pasto al desnudo. “Una improvisación de Acción Sonora”.
+      <div class="estilocaja" id="caja">
+      </div>
 
-<br><br>17/4/2010 Encuentro AvLab: Sound it yourself, de MediaLab Prado, En Busca Del Pasto  muestra el resultado de su convocatoria pública “Pasto En Escena: Taller de expresión espontánea” para crear una pequeña orquesta de los ruidos al estilo futurista  de Luigi Russolo, pero en clave de improvisación libre a partir de objetos cotidianos convertidos en instrumentos musicales.
-<br><br>
+      <div class="estilocaja" id="caja2">
+        <div class="estilocaja" id="cajita">
+          <h3>Pasto en Escena (o Pasto al Desnudo)</h3>
+          <p>En su línea hacia lo multidisciplinar, EBDP desarrolló en otoño de 2007 su juego “Pasto en Escena”. En su planteamiento original, este juego consiste en ofrecer un concierto de estricta improvisación musical, pero sin que los músicos tengan un lugar asignado sobre el escenario, ni tampoco un instrumento, objeto o set. Tanto los músicos como los instrumentos y objetos que se usarán se hallan fuera del escenario al comienzo de la actuación; todo empieza, pues, no sólo en silencio, sino además con el escenario vacío. Los músicos no sólo han de improvisar aquello que suena, sino también su lugar sobre el escenario, lo cual incluye la ubicación, la postura, el gesto…, entrando y saliendo a escena para configurar una sucesión de situaciones y disposiciones diferentes, al tiempo que se crea el inestable acontecer de lo musical.
 
-</p>
-<p>
-<img src="imagenes/fotos/trabajo escenico/EBDP_AvLab_.jpg" width="563" height="385" /></p>
-</div>
-</div>
-</div>
+            Siendo así, los “músicos” deben desempeñar también, en cierto modo, la labor de “actores” o “performers”. EBDP quiere que en su “Pasto en Escena” tengan cabida ya todo tipo de "acciones" y no sólo aquellas directamente relacionadas con lo musical. Del mismo modo, los músicos tienen la libertad de “disfrazarse”, o simplemente de cambiarse de ropa, poner y quitar colores de la escena, poner y quitar decorados u objetos de atrezo, etc…
+
+            En resumen, se trata de ofrecer una actuación músico-performativa improvisada, con un carácter tan lúdico como experimental.
+          </p>
+          <img src="imagenes/fotos/trabajo escenico/montaje_pas.jpg" width="575" height="137" />
+          <h3>Actuaciones realizadas del &quot;Pasto en Escena&quot;</h3>
+
+          26/10/2007. Centro cultural “La Casa de los Jacintos” (Madrid). “Al desnudo”
+          1/3/2008. Auditorio del “Ateneo de Madrid”, apertura del ciclo “Ateneo Abierto” (con la intervención escénica de Daniela Lemman).
+
+          <br/><br/>14/9/2008. IV muestra de arte sonoro e interactivo In-Sonora.
 
 
-<div  id="ccommons">
-  <div class="creative"id="text">2010. EN BUSCA DEL PASTO. Todos los contenidos de esta web están bajo licencia "by-sa 3.0" de</div>
+          <br/><br/>22/11/2008 Festival Ulterior  en 14-30 Espacio Joven de Vallecas. Pasto en Escena con <a href="http://drainingbeatsonthebrain.com" target="_blank">Araguaneyleaf</a>.
 
-  <div id="cc"><a href="http://creativecommons.org/licenses/by-sa/3.0/" target="_blank"><img src="imagenes/ccommons/cc.logo.large.png" width="148" height="34" border="0" /></a></div>
-</div>
+          <br/><br/>7/11/2009 Sala Magatzems Wall & Video (Valencia) Pasto al desnudo. “Una improvisación de Acción Sonora”.
 
-</body>
+          <br/><br/>17/4/2010 Encuentro AvLab: Sound it yourself, de MediaLab Prado, En Busca Del Pasto  muestra el resultado de su convocatoria pública “Pasto En Escena: Taller de expresión espontánea” para crear una pequeña orquesta de los ruidos al estilo futurista  de Luigi Russolo, pero en clave de improvisación libre a partir de objetos cotidianos convertidos en instrumentos musicales.
+          <br/><br/>
+
+          </p>
+          <p>
+            <img src="imagenes/fotos/trabajo escenico/EBDP_AvLab_.jpg" width="563" height="385" /></p>
+        </div>
+      </div>
+    </div>
+
+
+    <div  id="ccommons">
+      <div class="creative"id="text">2010. EN BUSCA DEL PASTO. Todos los contenidos de esta web están bajo licencia "by-sa 3.0" de</div>
+
+      <div id="cc"><a href="http://creativecommons.org/licenses/by-sa/3.0/" target="_blank"><img src="imagenes/ccommons/cc.logo.large.png" width="148" height="34" border="0" /></a></div>
+    </div>
+
+  </body>
 </html>
