Se añade el disco "Cuarto de baño"

--- a/t_discografico.html
+++ b/t_discografico.html
@@ -189,35 +189,25 @@
                     </tr>
 
                     <tr>
-
+                      <td><a href="http://www.jamendo.com/es/album/122464" target="_blank"><img src="imagenes/portadas/encasabano.jpg" border="0" /></a></td>
                       <td><a href="http://www.jamendo.com/es/album/97936" target="_blank"><img src="imagenes/portadas/2009.jpg" border="0" /></a></td>
-
                       <td><a href="http://www.jamendo.com/es/album/69522" target="_blank"><img src="imagenes/portadas/escena_magat.jpg" border="0" /></a></td>
-
                       <td><a href="http://www.jamendo.com/es/album/69246" target="_blank"><img src="imagenes/portadas/hoffman_II.jpg" border="0" /></a></td>
-
-
+                    </tr>
+                    <tr>
                       <td width="130"><a href="http://www.jamendo.com/es/album/57860" target="_blank"><img src="imagenes/portadas/imp8.jpg" width="130" height="130" border="0"  /></a></td>
-                    </tr>
-                    <tr>
                       <td width="130"><a href="http://www.jamendo.com/es/album/57552" target="_blank"><img src="imagenes/portadas/imp7.jpg" width="130" height="130" border="0" longdesc="http://www.jamendo.com/es/artist/en.busca.del.pasto" /></a></td>
-
                       <td width="130"><a href="http://www.jamendo.com/es/album/57540" target="_blank"><img src="imagenes/portadas/imp6.jpg" width="130" height="130" border="0" longdesc="http://www.jamendo.com/es/artist/en.busca.del.pasto" /></a></td>
-
                       <td><a href="http://www.jamendo.com/es/album/54686" target="_blank"><img src="imagenes/portadas/silenc3.jpg" width="130" height="130" border="0" /></a></td>
-
+                    </tr>
+                    <tr>
                       <td><a href="http://www.jamendo.com/es/album/54707" target="_blank"><img src="imagenes/portadas/conzanI.jpg" width="130" height="130" border="0" /></a> </td>
-                    </tr>
-                    <tr>
                       <td><a href="http://www.jamendo.com/es/album/46690" target="_blank"><img src="imagenes/portadas/primavera.jpg" width="130" height="130" border="0" /></a> </td>
-
                       <td><a href="http://www.jamendo.com/es/album/46700" target="_blank"><img src="imagenes/portadas/silenc2.jpg" width="130" height="130" border="0" /></a></td>
-
                       <td><a href="http://www.jamendo.com/es/album/44851" target="_blank"><img src="imagenes/portadas/liveconfusion.jpg" width="130" height="130" border="0" /></a></td>
-
-                      <td><a href="http://www.jamendo.com/es/album/43831" target="_blank"><img src="imagenes/portadas/imp5.jpg" width="130" height="130" border="0" /></a></td>
                     </tr>
                     <tr>
+                      <td><a href="http://www.jamendo.com/es/album/43831" target="_blank"><img src="imagenes/portadas/imp5.jpg" width="130" height="130" border="0" /></a></td>
                       <td><a href="http://www.jamendo.com/es/album/38155" target="_blank"><img src="imagenes/portadas/bestiarioII.jpg" width="130" height="130" border="0" /></a></td>
                     </tr>
 
