Se añade el disco "Los estándares del César"

--- a/t_discografico.html
+++ b/t_discografico.html
@@ -167,6 +167,14 @@
           <div id="cajadiscos">
             <p align="center">
               <table width="548" height="1569" border="0" cellpadding="2" id="discos">
+
+                <tr>
+                  <td width="130" height="20"><h3>2011</h3></td>
+                </tr>
+                <tr>
+                  <td><a href="http://www.jamendo.com/es/album/98925" target="_blank"><img src="imagenes/portadas/cesar.jpg" border="0" /></a></td>
+                </tr>
+
                 <tr>
                   <td width="130" height="20"><h3>2010</h3></td>
                 </tr>
