--- a/t_discografico_sol.html
+++ b/t_discografico_sol.html
@@ -142,12 +142,6 @@
 
 
 
-
-
-
-
-
-
       <div class="estilocaja" id="caja"></div>
 
 
@@ -159,24 +153,24 @@
             <p align="center">
               <table width="100" height="213" border="0" cellpadding="2" id="discos">
 
-
                 <tr>
                   <td width="130" height="20
                       "><h3>SOLOS</h3></td>
                 </tr>
-                <tr> <td width="130" height="134"><a href="http://www.jamendo.com/es/album/69707" target="_blank"><img src="imagenes/portadas/densidades.jpg" alt="En Busca del Pasto: Densidades Fluviales" width="130" height="130" border="0" /></a></td>
+
+                <tr>
+                  <td><a href="http://www.jamendo.com/es/album/122484" target="_blank"><img src="imagenes/portadas/cimbalos.jpg" border="0" /></a></td>
+                  <td width="130" height="134"><a href="http://www.jamendo.com/es/album/69707" target="_blank"><img src="imagenes/portadas/densidades.jpg" alt="En Busca del Pasto: Densidades Fluviales" width="130" height="130" border="0" /></a></td>
                 </tr>
+              </table>
 
-
-              </table> </DIV>
-
+          </div>
         </div>
       </div>
-    </div>
-    <div  id="ccommons">
-      <div class="creative"id="text">2010. EN BUSCA DEL PASTO. Todos los contenidos de esta web están bajo licencia "by-sa 3.0" de</div>
+      <div  id="ccommons">
+        <div class="creative"id="text">2010. EN BUSCA DEL PASTO. Todos los contenidos de esta web están bajo licencia "by-sa 3.0" de</div>
 
-      <div id="cc"><a href="http://creativecommons.org/licenses/by-sa/3.0/" target="_blank"><img src="imagenes/ccommons/cc.logo.large.png" width="148" height="34" border="0" /></a></div>
-    </div>
+        <div id="cc"><a href="http://creativecommons.org/licenses/by-sa/3.0/" target="_blank"><img src="imagenes/ccommons/cc.logo.large.png" width="148" height="34" border="0" /></a></div>
+      </div>
   </body>
 </html>
