Se añade el disco "Pasto D2"

--- a/t_discografico.html
+++ b/t_discografico.html
@@ -301,8 +301,8 @@
                   <tr>
 
                     <td><a href="http://www.jamendo.com/es/album/1047" target="_blank"><img src="http://imgjam.com/albums/s1/1047/covers/1.130.jpg" width="130" height="130" border="0" /></a></td>
-
                     <td><a href="http://www.jamendo.com/es/album/1048" target="_blank"><img src="imagenes/portadas/compvaquita2004.jpg" width="130" height="130" border="0" /></a></td>
+                    <td><a href="http://www.jamendo.com/es/album/128479" target="_blank"><img src="imagenes/portadas/pastod2.jpg" width="130" height="130" border="0" /></a></td>
                     <td><a href="http://www.jamendo.com/es/album/20401" target="_blank"><img src="imagenes/portadas/comppastoprimero.jpg" width="130" height="130" border="0" /></a></td>
                   </tr>
               </table>
