--- a/t_discografico_com.html
+++ b/t_discografico_com.html
@@ -181,6 +181,7 @@
                 <tr>
                   <td><a href="http://www.jamendo.com/es/album/1045" target="_blank"><img src="imagenes/portadas/comp2004.jpg" width="130" height="130" border="0" /></a></td>
                   <td><a href="http://www.jamendo.com/es/album/1048" target="_blank"><img src="imagenes/portadas/compvaquita2004.jpg" width="130" height="130" border="0" /></a></td>
+                  <td><a href="http://www.jamendo.com/es/album/128479" target="_blank"><img src="imagenes/portadas/pastod2.jpg" width="130" height="130" border="0" /></a></td>
                   <td><a href="http://www.jamendo.com/es/album/20401" target="_blank"><img src="imagenes/portadas/comppastoprimero.jpg" width="130" height="130" border="0" /></a></td>
                 </tr>
               </table>
